@@ -2821,3 +2821,6 @@ snapshot.c: use the fully encapsulated libspectrum_snap
 	 changed uidisplay_init be exactly the same one as on gtk ui, changes
 	 to win32display_area to have more similar structure to that of gtk
 	 ui's (Marek).
+20080724 ui/win32/win32display.c: Win32: win32 ui refactoring: removed
+	 register_scalers_noresize and win32display_setsize, replaced
+	 uidisplay_hotswap_gfx_mode with the code from gtk ui (Marek).
